# glyph

./: .clang-format  .gitignore  .gitmodules  404.html  CLAUDE.md  CMakeLists.txt  README.md  build_web.sh  glyph_engine_spec.md  index.html  mkdocs.yml  sitemap.xml
.claude/: conventions.md  docs.md  git.md  progress.md
.claude/commands/: commit.md
.github/workflows/: build.yml  docs.yml  release.yml
api/: index.html
api/audio/: index.html
api/camera/: index.html
api/font/: index.html
api/game/: index.html
api/input/: index.html
api/lua/: index.html
api/math/: index.html
api/renderer/: index.html
api/resources/: index.html
api/scene/: index.html
api/sprite_sheet/: index.html
api/texture/: index.html
api/tilemap/: index.html
api/time/: index.html
cmake/web/: shell.html
dev/conventions/: index.html
dev/progress/: index.html
docs/: getting-started.md  index.md
docs/api/: audio.md  camera.md  font.md  game.md  index.md  input.md  lua.md  math.md  renderer.md  resources.md  scene.md  sprite_sheet.md  texture.md  tilemap.md  time.md
docs/dev/: conventions.md  progress.md
getting-started/: index.html
include/glyph/: app.h  audio.h  camera.h  components.h  entity.h  font.h  glyph.h  input.h  lua_state.h  math.h  renderer.h  resources.h  scene.h  sprite_sheet.h  texture.h  tilemap.h  time.h
platform/android/: .gitignore  gradle.properties
platform/android/app/: build.gradle  proguard-rules.pro
platform/android/app/jni/: CMakeLists.txt
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/res/values/: strings.xml
platform/ios/: .gitignore  CMakeLists.txt  Info.plist.in  build_ios.sh
samples/01_hello_window/: CMakeLists.txt  main.cpp
samples/02_sprite/: CMakeLists.txt  main.cpp
samples/03_input/: CMakeLists.txt  main.cpp
samples/04_tilemap/: CMakeLists.txt  main.cpp
search/: search_index.json
src/: main_entry.cpp
src/audio/: audio.cpp  miniaudio_impl.cpp
src/core/: app.cpp  font.cpp  resources.cpp  stb_impl.cpp  time.cpp
src/input/: input.cpp
src/lua/: lua_bindings.cpp  lua_hotreload.cpp  lua_hotreload.h  lua_state.cpp  lua_state_impl.h  script_system.cpp
src/platform/: file_io.cpp  file_io.h  window.cpp  window.h
src/renderer/: camera.cpp  gl.h  renderer.cpp  shader.cpp  shader.h  shaders.h  sprite_batch.cpp  sprite_batch.h  texture.cpp
src/scene/: scene.cpp  sprite_sheet.cpp  systems.cpp  systems.h  tilemap.cpp
